objects/Storage_Item_Junction__c.object
<CustomObject>
    <description>Order Management: Object created to facilitate 1:m relationship between a storage configuration and its related item(s)
Release WW28 - 2016</description>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Item__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Management: Lookup field to associate a storage configuration to an item record
Release WW28 - 2016</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Storage Item Junctions</relationshipLabel>
        <relationshipName>Storage_Item_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_Configuration__c</fullName>
        <description>Order Management: field to create a m:d relationship between an item record and a storage configuration record
Release WW28 - 2016</description>
        <label>Storage Configuration</label>
        <referenceTo>Storage_Configuration__c</referenceTo>
        <relationshipLabel>Storage Item Junctions</relationshipLabel>
        <relationshipName>Storage_Item_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Storage Item Junction</label>
    <nameField>
        <displayFormat>SIJ-{00000}</displayFormat>
        <label>Storage Item Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storage Item Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>